fixed linked in and github icon issue. Was not showing up due to syntax error

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,7 +21,6 @@ li {
 /* base styles */
 a:link, a:visited {
     text-decoration: none;
-    decoration: none;
     color: var(--primary);
 }
 
